--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "Routy",
   "dependencies": {
     "underscore": "~1.4.4",
-    "inherits": "~2.0.0"
+    "inherits": "~2.0.0",
+    "mimetype": "0.0.5"
   },
   "devDependencies": {
     "tape": "~1.0.4",
